--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-Hello World
+<!DOCTYPE html>
+
+<html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="css/appstyle.css">
+        
+        <script type="text/javascript" src="jslibs/require.js" data-main="appscripts/main.js">
+        </script>
+
+        <title> FUN </title>
+    </head>
+
+  <body>
+    <header>WELCOME </header>
+    <div id='main'>
+
+        <article id="article">
+                <p> SPACE INVADERS  </p>
+        </article>
+    
+  </body>
+</html>
